--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <script src="node_modules/phaser/dist/phaser.js"></script>
 </head>
 <body>
-  <script src="src/main.js"></script>
+  <script type="module" src="src/main.ts"></script>
 </body>
 </html>
